--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "google/apiclient": "^2.0.0@RC"
+        "google/apiclient": "^1.1"
     },
     "autoload": {
         "psr-0": {
